--- a/instagram/templates/register.html
+++ b/instagram/templates/register.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+
 {% block body %}
 <div class="register">
 <div class="col-md-6">
@@ -19,24 +20,23 @@
     </div>
     <button class="btn btn-danger" id="register">Register</button>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" 
-      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" 
-      crossorigin="anonymous">
-    </script>
-
+    src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous"></script>
 </div>
 </div>
+ 
 
-<script>
+  <script>
 $(document).ready(function () {
 $('#register').click(function() {
-        $.post('/apis/v1/users/create/', {'username': $('#username').val(), 'email': $('#email').val(), 'password': $('#password').val()}, function() {
-            alert('가입을 환영합니다!');
-            window.location = {% url 'login' %};
-        }).fail(function(data) {
-            alert(data.responseJSON.message);
-        });
+    $.post('/apis/v1/users/create/', {'username': $('#username').val(), 'email': $('#email').val(), 'password': $('#password').val()}, function() {
+        alert('가입을 환영합니다!');
+        window.location = {% url 'login' %};
+    }).fail(function(data) {
+        alert(data.responseJSON.message);
+    });
 });
 });
-    </script>
+  </script>
 {% endblock %}
