--- a/instagram/templates/login.html
+++ b/instagram/templates/login.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% block body %}
 <div id="login">
 <div class="container">
@@ -14,6 +14,7 @@
   </div>
   <div class="form-group col-md-6">
     <div class="row">
+      
       <input type="submit" id="loginButton" class="form-control btn btn-danger" value="submit">
     </div>
   </div>
@@ -26,21 +27,23 @@
   </div>
 </div>
 
-<script
-src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" 
-integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" 
-crossorigin="anonymous"></script>
 
-<script>
-$(document).ready(function(){
-$('#login').click(function(){
-    $.post('/apis/v1/users/login',{'username':$('#username').val(),'password':$('#password').val()},function(){
-        location.reload();
-    }).fail(function(data){
+
+
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+
+  <script>
+$(document).ready(function () {
+$('#loginButton').click(function() {
+    $.post('/apis/v1/users/login/', {'username': $('#username').val(), 'password': $('#password').val()}, function() {
+       window.location = '/';
+    }).fail(function(data) {
         alert(data.responseJSON.message);
     });
 });
 });
-</script>
-
+  </script>
 {% endblock %}
